--- a/core/css/header.css
+++ b/core/css/header.css
@@ -296,14 +296,23 @@
 	cursor: pointer;
 }
 
-#header-right {
-	display: inline-flex;
+#header > div {
+	display: flex;
+}
+
+#header > div.header-left {
+	flex: 0 0 50%;	
+}
+
+#header > #header-right {
+	justify-content: flex-end;
 }
 
 #settings {
 	display: inline-block;
 	color: #ddd;
 	cursor: pointer;
+	flex: 0 0 auto;
 }
 #settings .icon-loading-small-dark {
 	display: inline-block;
